[package]
name = "alt-dedup"
version = "0.1.0"
authors = ["tomSp <marli@frost.red>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.3.3", optional = true }
rand = { version = "0.7.3", features = ["small_rng"], optional = true }

[features]
bench = ["criterion", "rand"]

[[bench]]
name = "vs_std"
path = "benches/vs_std.rs"
required-features = ["bench"]
harness = false
